nexusbank/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexusbank-service
spec:
  selector:
    app: nexusbank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
